2단계 - PR 수정 null 검증 테스트